# django-social-auth-token

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
social_oauth_token/: views.py
tests/: settings.py  test_views.py
